--- a/mlops-ml-project/notebooks/01_data_ingestion.ipynb
+++ b/mlops-ml-project/notebooks/01_data_ingestion.ipynb
@@ -84,10 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# config manager\n",
     "from src.mlproject.constants import *\n",
     "from src.mlproject.utils.common import read_yaml, create_directories"
    ]
